kubernetes/storage-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: storage-test

spec:
  containers:
    - name: storage-test
      image: busybox:latest
      command: ["sh", "-c", "sleep 3600"]

      volumeMounts:
        - name: data
          mountPath: /data

  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: nginx-pvc
